--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "mongodb": "^6.10.0",
     "next": "^15.0.2",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
