--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.6.1"
   }
