--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.6.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15"
   }
 }
