--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
-    "react-syntax-highlighter": "^15.6.1"
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-raw": "^7.0.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
+    "remark-slug": "^7.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
