--- a/package.json
+++ b/package.json
@@ -9,20 +9,36 @@
     "export": "next export"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^2.0.0",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "framer-motion": "^11.11.17",
     "gray-matter": "^4.0.3",
+    "markdown-it": "^14.1.0",
+    "markdown-it-anchor": "^9.2.0",
+    "markdown-to-jsx": "^7.7.0",
     "mongodb": "^6.10.0",
-    "next": "^15.0.2",
+    "next": "^15.0.3",
     "prettier": "^3.3.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.6.1",
+    "rehype": "^13.0.2",
     "rehype-autolink-headings": "^7.1.0",
+    "rehype-prism": "^2.3.3",
     "rehype-raw": "^7.0.0",
+    "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
-    "remark-slug": "^7.0.1"
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.1",
+    "remark-slug": "^7.0.1",
+    "unified": "^11.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
