--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "^2.0.0",
+    "@chakra-ui/react": "^2.10.4",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
-    "framer-motion": "^11.11.17",
+    "framer-motion": "^11.12.0",
     "gray-matter": "^4.0.3",
     "markdown-it": "^14.1.0",
     "markdown-it-anchor": "^9.2.0",
@@ -28,6 +28,7 @@
     "react-syntax-highlighter": "^15.6.1",
     "rehype": "^13.0.2",
     "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.14.0",
     "rehype-prism": "^2.3.3",
     "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.1",
@@ -38,6 +39,7 @@
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.1",
     "remark-slug": "^7.0.1",
+    "shiki": "^1.24.0",
     "unified": "^11.0.5"
   },
   "devDependencies": {
