--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@emotion/styled": "^11.13.5",
     "framer-motion": "^11.12.0",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.11.1",
     "markdown-it": "^14.1.0",
     "markdown-it-anchor": "^9.2.0",
     "markdown-to-jsx": "^7.7.0",
+    "marked": "^15.0.7",
     "mongodb": "^6.10.0",
     "next": "^15.0.3",
     "prettier": "^3.3.3",
@@ -39,6 +41,7 @@
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.1",
     "remark-slug": "^7.0.1",
+    "sanitize-html": "^2.14.0",
     "shiki": "^1.29.1",
     "unified": "^11.0.5"
   },
